<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/dimen_32x"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/trophy" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingRight="@dimen/dimen_64x">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/dark_grey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLoginTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_64x">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailLoginEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/dark_grey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLoginTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_64x"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordLoginEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true"
            android:textColor="@color/dark_grey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/registerAppCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_64x"
        android:layout_marginTop="@dimen/dimen_32x"
        android:layout_marginRight="@dimen/dimen_64x"
        android:layout_marginBottom="@dimen/dimen_32x"
        android:background="@color/colorPrimary"
        android:text="@string/signup"
        android:textColor="@color/white" />
</LinearLayout>